# services/events-service/python-flask-server/swagger_server/models/reward_points_status_update.py
@@ -1,0 +1,134 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class RewardPointsStatusUpdate(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, op: str=None, path: str=None, value: str=None):  # noqa: E501
+        """RewardPointsStatusUpdate - a model defined in Swagger
+
+        :param op: The op of this RewardPointsStatusUpdate.  # noqa: E501
+        :type op: str
+        :param path: The path of this RewardPointsStatusUpdate.  # noqa: E501
+        :type path: str
+        :param value: The value of this RewardPointsStatusUpdate.  # noqa: E501
+        :type value: str
+        """
+        self.swagger_types = {
+            'op': str,
+            'path': str,
+            'value': str
+        }
+
+        self.attribute_map = {
+            'op': 'op',
+            'path': 'path',
+            'value': 'value'
+        }
+
+        self._op = op
+        self._path = path
+        self._value = value
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'RewardPointsStatusUpdate':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The RewardPointsStatusUpdate of this RewardPointsStatusUpdate.  # noqa: E501
+        :rtype: RewardPointsStatusUpdate
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def op(self) -> str:
+        """Gets the op of this RewardPointsStatusUpdate.
+
+
+        :return: The op of this RewardPointsStatusUpdate.
+        :rtype: str
+        """
+        return self._op
+
+    @op.setter
+    def op(self, op: str):
+        """Sets the op of this RewardPointsStatusUpdate.
+
+
+        :param op: The op of this RewardPointsStatusUpdate.
+        :type op: str
+        """
+        allowed_values = ["replace"]  # noqa: E501
+        if op not in allowed_values:
+            raise ValueError(
+                "Invalid value for `op` ({0}), must be one of {1}"
+                .format(op, allowed_values)
+            )
+
+        self._op = op
+
+    @property
+    def path(self) -> str:
+        """Gets the path of this RewardPointsStatusUpdate.
+
+
+        :return: The path of this RewardPointsStatusUpdate.
+        :rtype: str
+        """
+        return self._path
+
+    @path.setter
+    def path(self, path: str):
+        """Sets the path of this RewardPointsStatusUpdate.
+
+
+        :param path: The path of this RewardPointsStatusUpdate.
+        :type path: str
+        """
+        allowed_values = ["/reward_points_status"]  # noqa: E501
+        if path not in allowed_values:
+            raise ValueError(
+                "Invalid value for `path` ({0}), must be one of {1}"
+                .format(path, allowed_values)
+            )
+
+        self._path = path
+
+    @property
+    def value(self) -> str:
+        """Gets the value of this RewardPointsStatusUpdate.
+
+
+        :return: The value of this RewardPointsStatusUpdate.
+        :rtype: str
+        """
+        return self._value
+
+    @value.setter
+    def value(self, value: str):
+        """Sets the value of this RewardPointsStatusUpdate.
+
+
+        :param value: The value of this RewardPointsStatusUpdate.
+        :type value: str
+        """
+        allowed_values = ["Pending", "Approved"]  # noqa: E501
+        if value not in allowed_values:
+            raise ValueError(
+                "Invalid value for `value` ({0}), must be one of {1}"
+                .format(value, allowed_values)
+            )
+
+        self._value = value
